--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,56 @@
 @import "tailwindcss";
+@custom-variant hover (&:hover);
+
+.moving-border {
+    position: relative;
+    padding: 12px 24px;
+    background: transparent;
+    color: #fff;
+    font-size: 16px;
+    border: 2px solid transparent;
+    cursor: pointer;
+    z-index: 1;
+    overflow: hidden;
+    border-radius: 10px;
+
+  }
+  .moving-border:hover {
+    background-color: #111;
+  }
+  
+  .moving-border::before {
+    content: "";
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    background: linear-gradient(45deg, #00f6ff, #ff00d4, #00f6ff);
+    background-size: 400%;
+    border-radius: 8px;
+    z-index: -1;
+    animation: borderMove 5s linear infinite;
+  }
+  
+  .moving-border::after {
+    content: "";
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    width: calc(100% - 4px);
+    height: calc(100% - 4px);
+    /* background-color: #111; */
+    background-color:gray;
+    border-radius: 10px;
+    z-index: -1;
+  }
+  
+  @keyframes borderMove {
+    0% {
+      background-position: 0% 50%;
+    }
+    100% {
+      background-position: 400% 50%;
+    }
+  }
+  
